force-app/main/default/objects/AccountContactRole__c/AccountContactRole__c.object-meta.xml
<CustomObject>
    <label>AccountContactRole</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>AccountContactRole Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountContactRoles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>