force-app/main/default/objects/AccountContactRole__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>Account__r.ShippingStreet+&#39;&#39;+Account__r.ShippingCity+&#39;&#39;+Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>