force-app/main/default/objects/AccountContactRole__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>Evaluator</fullName>
            </value>
            <value>
                <fullName>Evaluator and Approver</fullName>
            </value>
            <value>
                <fullName>Evaluator and Decision Maker</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>user and Decision Maker</fullName>
            </value>
            <value>
                <fullName>User and Evaluator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>